[package]
name = "harq"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for exploring and filtering HAR (HTTP Archive) files"
authors = ["harq contributors"]
license = "MIT"
repository = "https://github.com/example/harq"
keywords = ["har", "http", "archive", "cli", "network"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.15"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
thiserror = "1"
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
